# ellipsis

./: Cargo.toml  README.md  ellipsis.yml  shell.nix  test.dockerfile
src/: cmd.rs  config.rs  fs.rs  lib.rs  main.rs  opts.rs
tests/: ellipsis.yml  integration.rs
